<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.diabetesquizapp.MainActivity">

    <!--Header Layout-->
    <RelativeLayout
        android:id="@+id/header"
        style="@style/HeaderTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <!--Header Text-->
        <TextView
            android:id="@+id/headerText"
            style="@style/HeaderTextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_header_text" />

        <!--More button-->
        <Button
            android:id="@+id/moreButton"
            style="@style/RoundButtonStyle"
            android:layout_width="@dimen/button_round_dimen"
            android:layout_height="@dimen/button_round_dimen"
            android:layout_alignParentRight="true"
            android:layout_marginHorizontal="@dimen/small_two"
            android:stateListAnimator="@anim/elevate"
            android:text="@string/plus_symbol" />

    </RelativeLayout>

    <!--Footer Layout-->
    <RelativeLayout
        android:id="@+id/footer"
        style="@style/FooterTheme"
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_one"
        android:layout_alignParentBottom="true">

        <!--Footer Text-->
        <TextView
            android:id="@+id/footerText"
            style="@style/FooterTextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/end_diabetes_footer_text" />

    </RelativeLayout>

    <!--Body Scroll View-->
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header"
        android:fillViewport="true">

        <!--Body Layout-->
        <LinearLayout
            android:id="@+id/body_layout_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:gravity="center"
            android:orientation="vertical">

            <!--Intro/Question Text-->
            <TextView
                android:id="@+id/questionText"
                style="@style/BodyTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_quiz_text" />

            <!--Name Input Field-->
            <EditText
                android:id="@+id/nameInput"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name_hint" />

            <!--Question 1-->
            <RadioGroup
                android:id="@+id/radioGroup1"
                style="@style/RadioGroupStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <!--Question 1 Answer 1-->
                <RadioButton
                    android:id="@+id/q1_a1"
                    style="@style/RadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_a1_text" />

                <!--Quesiont 1 Answer 2-->
                <RadioButton
                    android:id="@+id/q1_a2"
                    style="@style/RadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_a2_text" />

                <!--Question 1 Answer 3-->
                <RadioButton
                    android:id="@+id/q1_a3"
                    style="@style/RadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_a3_text" />

                <!--Question 1 Answer 4-->
                <RadioButton
                    android:id="@+id/q1_a4"
                    style="@style/RadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_a4_text" />

            </RadioGroup>

            <!--Question 2-->
            <LinearLayout
                android:id="@+id/checkboxGroup2"
                style="@style/CheckboxGroupStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <!--Question 2 Answer 1-->
                <CheckBox
                    android:id="@+id/q2_a1"
                    style="@style/CheckboxStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_a1_text" />

                <!--Question 2 Answer 2-->
                <CheckBox
                    android:id="@+id/q2_a2"
                    style="@style/CheckboxStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_a2_text" />

                <!--<Question 2 Answer 3-->
                <CheckBox
                    android:id="@+id/q2_a3"
                    style="@style/CheckboxStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_a3_text" />

                <!--Question 2 Answer 4-->
                <CheckBox
                    android:id="@+id/q2_a4"
                    style="@style/CheckboxStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_a4_text" />

            </LinearLayout>

            <!--Question 3-->
            <RadioGroup
                android:id="@+id/radioGroup2"
                style="@style/RadioGroupStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <!--Question 3 Answer 1-->
                <RadioButton
                    android:id="@+id/q3_a1"
                    style="@style/RadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3_a1_text" />

                <!--Question 3 Answer 2-->
                <RadioButton
                    android:id="@+id/q3_a2"
                    style="@style/RadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3_a2_text" />

                <!--Question 3 Answer 3-->
                <RadioButton
                    android:id="@+id/q3_a3"
                    style="@style/RadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3_a3_text" />

                <!--Question 3 Answer 4-->
                <RadioButton
                    android:id="@+id/q3_a4"
                    style="@style/RadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3_a4_text" />

            </RadioGroup>

            <!--Question 4 Input-->
            <EditText
                android:id="@+id/q4_input"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/answer_hint_text"
                android:visibility="gone" />

            <!--Question 5-->
            <LinearLayout
                android:id="@+id/checkboxGroup5"
                style="@style/CheckboxGroupStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <!--Question 5 Answer 1-->
                <CheckBox
                    android:id="@+id/q5_a1"
                    style="@style/CheckboxStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q5_a1_text" />

                <!--Question 5 Answer 2-->
                <CheckBox
                    android:id="@+id/q5_a2"
                    style="@style/CheckboxStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q5_a2_text" />

                <!--Question 5 Answer 3-->
                <CheckBox
                    android:id="@+id/q5_a3"
                    style="@style/CheckboxStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q5_a3_text" />

                <!--Question 5 Answer 4-->
                <CheckBox
                    android:id="@+id/q5_a4"
                    style="@style/CheckboxStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q5_a4_text" />

            </LinearLayout>

            <!--Question 6-->
            <RadioGroup
                android:id="@+id/radioGroup6"
                style="@style/RadioGroupStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <!--Question 6 Answer 1-->
                <RadioButton
                    android:id="@+id/q6_a1"
                    style="@style/RadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q6_a1_text" />

                <!--Question 6 Answer 2-->
                <RadioButton
                    android:id="@+id/q6_a2"
                    style="@style/RadioButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q6_a2_text" />

            </RadioGroup>

            <!--Detailed Summary Text-->
            <TextView
                android:id="@+id/summaryText"
                style="@style/SummaryTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/summary_tap_text"
                android:visibility="gone" />

            <!--Begin/Submit Button-->
            <Button
                android:id="@+id/submitButton"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/begin_submit_btn_text" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
